force-app/main/default/objects/clariti__PaymentBatch__c/clariti__PaymentBatch__c.object-meta.xml
<CustomObject>
    <description>Payment Batch is used to conduct cashiering activities and record cart transactions</description>
    <label>Payment Batch</label>
    <nameField>
        <displayFormat>PB-{MM}{DD}{YYYY}-{000}</displayFormat>
        <label>Payment Batch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>