force-app/main/default/objects/clariti__PaymentBatch__c/fields/clariti__CashierSession__c.field-meta.xml
<CustomField>
    <fullName>clariti__CashierSession__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cashier Session</label>
    <referenceTo>clariti__CashierSession__c</referenceTo>
    <relationshipLabel>Payment Batches</relationshipLabel>
    <relationshipName>PaymentBatches</relationshipName>
    <type>Lookup</type>
</CustomField>