force-app/main/default/objects/clariti__PaymentBatch__c/fields/clariti__CloseDate__c.field-meta.xml
<CustomField>
    <fullName>clariti__CloseDate__c</fullName>
    <label>Close Date</label>
    <type>DateTime</type>
</CustomField>