force-app/main/default/objects/clariti__PaymentBatch__c/fields/clariti__Default__c.field-meta.xml
<CustomField>
    <fullName>clariti__Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>