force-app/main/default/objects/clariti__PaymentBatch__c/recordTypes/clariti__Counter.recordType-meta.xml
<RecordType>
    <fullName>clariti__Counter</fullName>
    <active>true</active>
    <label>Counter</label>
</RecordType>