force-app/main/default/objects/clariti__PaymentBatch__c/recordTypes/clariti__Online.recordType-meta.xml
<RecordType>
    <fullName>clariti__Online</fullName>
    <active>true</active>
    <label>Online</label>
</RecordType>