force-app/main/default/objects/clariti__PaymentBatch__c/listViews/clariti__Cashier.listView-meta.xml
<ListView>
    <fullName>clariti__Cashier</fullName>
    <columns>NAME</columns>
    <columns>clariti__Default__c</columns>
    <columns>clariti__Status__c</columns>
    <columns>clariti__CashierSession__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>clariti__Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>clariti__PaymentBatch__c.clariti__Counter</value>
    </filters>
    <label>My Batches</label>
</ListView>