force-app/main/default/objects/clariti__PaymentBatch__c/listViews/clariti__OnlinePaymentBatches.listView-meta.xml
<ListView>
    <fullName>clariti__OnlinePaymentBatches</fullName>
    <columns>NAME</columns>
    <columns>clariti__Status__c</columns>
    <columns>clariti__Default__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>clariti__PaymentBatch__c.clariti__Online</value>
    </filters>
    <label>Online Payment Batches</label>
</ListView>